# streamlit_tutorial

./: Dockerfile  README.md  pyproject.toml
app/: streamlit_tutorial.py
app/pages/: 1_main_concepts.py  2_uber_pickups.py  3_Plotting_Demo.py  4_Mapping_Demo.py  5_Dataframe_Demo.py
app/src/: constants.py
blog/: 1_dependency_management.md  2_streamlit_basics.md  3_widgets.md  4_layout.md  5_large_data.md  6_creating_multi_page_apps.md  7_uber_pickup_app.md  8_dockerizing_the_app.md
tests/: test_streamlit_tutorial.py
