[tool.poetry]
name = "streamlit_tutorial"
version = "0.1.0"
description = ""
authors = ["Chris Rudnicky <crudnicky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
